--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Contenedor de botones -->
         <div id="buttonsContainer" class="d-flex justify-content-center gap-5 mt-3">
-            <button onclick="window.location.href='yes.html';" class="btn btn-success btn-lg">Yes 💚</button>
+            <button onclick="window.location.href='yes.html';" class="btn btn-success btn-lg">SII!! 💗</button>
             <button id="noButton" class="btn btn-danger btn-lg">No 💔</button>
         </div>
     </div>
